# inkpy

./: .cursorrules  .gitignore  .pre-commit-config.yaml
.cursor/commands/: superexecute.md  superplan.md
.cursor/rules/: brainstorming-workflow.mdc  debugging-workflow.mdc  execution-workflow.mdc  planning-workflow.mdc  tdd-workflow.mdc
docs/plans/: 2025-12-01-inkpy-100-percent-parity.md  2025-12-01-inkpy-migration.md  (+9 more)
ink/src/: styles.ts
inkpy/: .pre-commit-config.yaml  README.md  app.py  debug_poga.py  layout_engine.py  prototype.py  pyproject.toml  setup.sh
inkpy/examples/: claude_code_demo.py  counter.py  hello_world.py  interactive.py  interactive_reconciler.py
inkpy/inkpy/: __init__.py  console_patch.py  dom.py  get_max_width.py  ink.py  instances.py  is_in_ci.py  log_update.py  measure_element.py  measure_text.py  render.py  wrap_text.py
inkpy/inkpy.egg-info/: SOURCES.txt  requires.txt
inkpy/inkpy/backend/: tui_backend.py
inkpy/inkpy/components/: __init__.py  accessibility_context.py  app.py  app_context.py  background_context.py  box.py  code_block.py  confirm_input.py  error_overview.py  focus_context.py  link.py  multi_select.py  newline.py  progress_bar.py  select_input.py  spacer.py  spinner.py  static.py  stderr_context.py  stdin_context.py  stdout_context.py  streaming_text.py  style_props.py  table.py  text.py  text_input.py  transform.py
inkpy/inkpy/hooks/: __init__.py  use_app.py  use_focus.py  use_focus_manager.py  use_input.py  use_is_screen_reader_enabled.py  use_stderr.py  use_stdin.py  use_stdout.py  use_terminal_dimensions.py
inkpy/inkpy/input/: __init__.py  event_emitter.py  keypress.py
inkpy/inkpy/layout/: styles.py  text_node.py  yoga_node.py
inkpy/inkpy/reconciler/: __init__.py  app_hooks.py  component.py  components.py  element.py  fiber.py  focus_hooks.py  hooks.py  reconciler.py
inkpy/inkpy/renderer/: ansi_tokenize.py  background.py  borders.py  colorize.py  output.py  render_node.py  renderer.py  screen_reader.py
inkpy/inkpy/utils/: __init__.py  highlight.py
inkpy/tests/: test_ansi_escapes.py  test_ansi_sequences.py  test_ansi_tokenize.py  test_app_error_boundary.py  test_app_hooks.py  test_app_input.py  test_background.py  test_borders.py  test_box_aria.py  test_box_style_props.py  test_colorize.py  test_components.py  test_console_patch.py  test_contexts.py  test_dom.py  test_error_overview.py  test_error_overview_enhancement.py  test_event_emitter.py  test_focus.py  test_focus_input_integration.py  test_function_keys_integration.py  test_get_max_width.py  test_ink.py  test_ink_full.py  test_integration.py  test_interactive_reconciler.py  test_keypress.py  test_layout_lifecycle.py  test_log_update.py  test_measure_element.py  test_measure_function.py  test_measure_text_ansi.py  test_modifier_keys_integration.py  test_new_components_integration.py  test_output.py  test_rapid_input_rendering.py  test_reconciler_integration.py  test_render.py  test_render_integration.py  test_render_node.py  (+23 more)
inkpy/tests/components/: __init__.py  test_code_block.py  test_confirm_input.py  test_link.py  test_multi_select.py  test_progress_bar.py  test_select_input.py  test_spinner.py  test_streaming_text.py  test_table.py  test_text_input.py
inkpy/tests/hooks/: __init__.py  test_use_terminal_dimensions.py
inkpy/tests/reconciler/: __init__.py  test_component.py  test_components.py  test_element.py  test_fiber.py  test_focus_hooks.py  test_hooks.py  test_reconciler.py
python_port/: .gitignore  MIGRATION_STATUS.md  layout_engine.py  prototype.py  pyproject.toml  requirements.txt
python_port/examples/: counter.py  hello_world.py
python_port/inkpy/: __init__.py  console_patch.py  dom.py  get_max_width.py  ink.py  instances.py  is_in_ci.py  log_update.py  measure_element.py  measure_text.py  render.py  wrap_text.py
python_port/inkpy.egg-info/: PKG-INFO  SOURCES.txt
python_port/inkpy/backend/: tui_backend.py
python_port/inkpy/components/: __init__.py  app.py  app_context.py  box.py  error_overview.py  focus_context.py  newline.py  spacer.py  static.py  stderr_context.py  stdin_context.py  stdout_context.py  text.py  transform.py
python_port/inkpy/hooks/: __init__.py  use_app.py  use_focus.py  use_focus_manager.py  use_input.py  use_is_screen_reader_enabled.py  use_stderr.py  use_stdin.py  use_stdout.py
python_port/inkpy/input/: __init__.py  keypress.py
python_port/inkpy/layout/: __init__.py  styles.py  text_node.py  yoga_node.py
python_port/inkpy/renderer/: __init__.py  ansi_tokenize.py  output.py  render_node.py  renderer.py  screen_reader.py
python_port/tests/: test_ansi_escapes.py  test_ansi_sequences.py  test_ansi_tokenize.py  test_app_error_boundary.py  test_app_input.py  test_background.py  test_borders.py  test_box_aria.py  test_colorize.py  test_console_patch.py  test_contexts.py  test_dom.py  test_error_overview.py  test_error_overview_enhancement.py  test_event_emitter.py  test_focus.py  test_get_max_width.py  test_ink.py  test_ink_full.py  test_integration.py  test_keypress.py  test_log_update.py  test_measure_element.py  test_measure_function.py  test_output.py  test_render.py  test_render_integration.py  test_render_node.py  test_renderer.py  test_screen_reader_output.py  test_std_hooks.py  test_styles.py  test_text_background.py  test_text_measurement.py  test_text_screen_reader.py  test_transform.py  test_tui_backend.py  test_tui_backend_hide.py  test_tui_backend_reconciler.py  test_use_app.py  (+6 more)
