[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inkpy"
version = "0.1.0"
description = "React for CLIs in Python"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "poga>=0.1.0",
    "reactpy>=1.0.0",
    "wcwidth>=0.2.5",
]
requires-python = ">=3.9"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    # Ignore ReactPy deprecation warnings for asyncio.iscoroutinefunction (Python 3.14+)
    # This is an upstream issue in ReactPy that needs to be fixed there
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
