[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inkpy"
version = "0.1.0"
description = "React for CLIs in Python"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "poga>=0.1.0",
    "reactpy>=1.0.0",
]
requires-python = ">=3.9"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
